--- a/style.css
+++ b/style.css
@@ -1,12 +1,183 @@
 :root {
+    --clr-accent-500: hsl(12, 70%, 45%);
     --clr-accent-400: hsl(12, 88%, 59%);
+    --clr-accent-300: hsl(13, 88%, 70%);
     --clr-accent-100: hsl(13, 100%, 96%);
 
     --clr-primary-400: hsl(228, 39%, 23%);
 
-    --clr-neutral-100: hsl(233, 12%, 13%);
-    --clr-neutral-900: hsl(0 0% 0%);
+    --clr-neutral-900: hsl(233, 12%, 13%);
+    --clr-neutral-100: hsl(0 0% 100%);
 
     --ff-primary: 'Be Vietnam Pro', sans-serif;
-    --f
+    --ff-body: var(--ff-primary);
+    --ff-heading: var(--ff-primary);
+
+    --fw-regular: 400;
+    --fw-semi-bold: 500;
+    --fw-bold: 700;
+
+    --fs-300: .8125rem;
+    --fs-400: .875rem;
+    --fs-500: .9375rem;
+    --fs-600: 1rem;
+    --fs-700: 1.875rem;
+    --fs-800: 2.5rem;
+    --fs-900: 3.5rem;
+
+    --fs-body: var(--fs-400);
+    --fs-primary-heading: var(--fs-800);
+    --fs-secondary-heading: var(--fs-700);
+    --fs-nav: var(--fs-500);
+    --fs-button: var(--fs-300);
+
+    --size-100: .25rem;
+    --size-200: .5rem;
+    --size-300: .75rem;
+    --size-400: 1rem;
+    --size-500: 1.5rem;
+    --size-600: 2rem;
+    --size-700: 3rem;
+    --size-800: 4rem;
+    --size-900: 5rem;
+}
+
+@media (min-width: 50em){
+    :root {
+        
+        --fs-600: 2.5rem;
+        --fs-700: 3.5rem;
+
+        --fs-body: var(--fs-500);
+        --fs-primary-heading: var(--fs-900);
+        --fs-secondary-heading: var(--fs-800);
+        
+        --fs-nav: var(--fs-300);
+    }
+}
+
+/* Utility classes*/
+
+.text-primary-400 {
+    color: var(--clr-primary-400);
+}
+.text-accent-400 {
+    color: var(--clr-accent-400);
+}
+.text-accent-100 {
+    color: var(--clr-accent-100);
+}
+.text-neutral-100 {
+    color: var(--clr-neutral-100);
+}
+.text-neutral-900 {
+    color: var(--clr-neutral-900);
+}
+
+.bg-primary-400 {
+    background-color: var(--clr-primary-400);
+}
+.bg-accent-400 {
+    background-color: var(--clr-accent-400);
+}
+.bg-accent-100 {
+    background-color: var(--clr-accent-100);
+}
+.bg-neutral-100 {
+    background-color: var(--clr-neutral-100);
+}
+.bg-neutral-900 {
+    background-color: var(--clr-neutral-900);
+}
+
+.fw-bold { font-weight: var(--fw-bold);}
+.fw-semi-bold { font-weight: var(--fw-semi-bold);}
+.fw-regular { font-weight: var(--fw-regular);}
+
+.fs-primary-heading {
+    font-size: var(--fs-primary-heading);
+    line-height: 1.1;
+}
+.fs-secondary-heading {
+    font-size: var(--fs-secondary-heading);
+    line-height: 1.1;
+}
+
+.fs-300 {
+    font-size: var(--fs-300);
+}
+.fs-400 {
+    font-size: var(--fs-400);
+}
+.fs-500 {
+    font-size: var(--fs-500);
+}
+.fs-600 {
+    font-size: var(--fs-600);
+}
+
+.padding-block-900 {
+    padding-block: var(--size-900);
+}
+.padding-block-700 {
+    padding-block: var(--size-700);
+}
+
+.container {
+    --max-width: 1110px;
+    --padding: 1rem;
+
+    width: min(var(--max-width), 100% - (var(--padding) * 2));
+    margin-inline: auto;
+}
+.even-columns {
+    display: grid;
+    gap: 1rem;
+}
+
+@media (min-width: 50em){
+    .even-columns{
+        grid-auto-flow: column;
+        grid-auto-columns: 1fr;
+    }
+}
+
+/* General styling */
+
+body {
+    font-size: var(--fs-body);
+    font-family: var(--ff-body);
+    color: var(--clr-primary-400);
+}
+
+/* button */
+
+.button {
+    cursor: pointer;
+    text-decoration: none;
+    border: 0;
+    border-radius: 100vmax;
+    padding: 1.25em 2.5em;
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-button);
+    line-height: 1;
+    color: var(--clr-neutral-100);
+    background-color: var(--clr-accent-400);
+    box-shadow: 0 1.15em 1em -1em var(--clr-accent-500);
+}
+
+.button[data-type="inverted"]{
+    background-color: var(--clr-neutral-100);
+    color: var(--clr-accent-400);
+}
+.button[data-type="inverted"]:hover,
+.button[data-type="inverted"]:focus-visible
+{
+    background-color: var(--clr-neutral-100);
+    color: var(--clr-accent-300);
+}
+
+.button:hover,
+.button:focus-visible {
+    background-color: var(--clr-accent-300);
 }
